gcc/testsuite/gdc.test/compilable/test4364.d
struct Object{}
class Game {}

void main()
{
    static assert(is(Object == struct));
    static assert(is(object.Object == class));
}
