gcc/testsuite/gdc.test/fail_compilation/fail4269e.d

static if(is(typeof(X5.init))) {}
typedef Y X5;

void main() {}
